# clapgo

./: .gitignore  .gitmodules  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  CMakeLists.txt  CMakePresets.json  CODEGEN_STRATEGY.md  DEVEXP.md  GUARDRAILS.md  IMPLEMENTATION_SUMMARY.md  Makefile  PHASE3_COMPLETE.md  README.md  ROADMAP.md  TODO  TODO.md  arch-progress.md  build.sh  changes-summary.md  check_daw_preset_discovery.md  cleanup.md  create_plugin.sh  current-effort.md  debug-output.txt  filter-cutoff-improvement.md  final-task.md  gain  gain-refactor.md  go.mod  install.sh  makefile-review.md  notes  output  plugin-discovery-design.md  plugin-loading-issue.md  preset_workarounds.md  reduce-boilerplate.md  summary.md  synth-refactor.md  test_embedded_presets.sh  (+14 more)
cmake/: GoLibrary.cmake  MacOSXBundleInfo.plist.in
cmd/clapgo/: main.go
cmd/generate-manifest/: main.go
cmd/goclap/: main.go
cmd/wrapper/: main.go
docs/: README.md  ambisonic-extension.md  api-reference.md  architecture.md  audio_ports_activation.md  bridge_proposal.md  build-guide.md  build-system.md  build.md  build_architecture.md  build_system.md  cmake-integration.md  considerations.md  create-plugin.md  custom_plugin_ids.md  dsp-guide.md  embedded-presets.md  extension-architecture.md  guardrails.md  implementation-guide.md  json-c-manifest-implementation.md  note_name_extension.md  parameters.md  pluginSpecificCodeIssues.md  plugin_registration.md  presetStrategy.md  roadmap.md  separations.md  sharedCode.md  usage.md
docs/architecture/: overview.md
docs/extensions/: README.md
examples/: Makefile.template  audio_ports_activation_example.go  configurable_audio_ports_example.go  drum_note_names_example.go  gain_with_ports_activation.go  gui_bridge_template.c  posix_fd_support_example.go  render_example.go  thread_pool_example.go
examples/gain/: CMakeLists.txt  Makefile  constants  constants.go  exports.go  gain  gain.go.h  gain.json  libgain.h  main.go  main.go.shared  provider.go
examples/gain-with-gui/: CMakeLists.txt  README.md  gui_bridge.cpp  main.go
examples/gain-with-gui/qml/: CMakeLists.txt  main.qml
examples/gain/plugin/: plugin.c  plugin.h
examples/gain/presets/factory/: boost.json  unity.json
examples/synth/: CMakeLists.txt  Makefile  constants.go  exports.go  main.go  main.go.bak  provider.go  synth  synth.json
examples/synth/presets/factory/: lead.json  pad.json
internal/bridge/: bridge.go  cbridge.c  main.go  registry.go
internal/registry/: registry.go
pkg/api/: ambisonic.go  audio.go  audio_ports.go  audio_ports_activation.go  audio_ports_config.go  cgo_wrapper.go  configurable_audio_ports.go  constants.go  context_menu.go  context_menu_helpers.go  event_helpers.go  event_registry.go  events.go  events_bench_test.go  exports.go  extensions.go  host.go  integration_bench_test.go  logger_bench_test.go  note_name.go  noteports.go  param_helpers.go  param_indication.go  params.go  params_bench_test.go  plugin.go  posix_fd_support.go  remote_controls.go  render.go  state_helpers.go  stream.go  surround.go  thread_check.go  thread_check_debug.go  thread_check_release.go  thread_pool.go  thread_safety.go  tuning.go  voice_info.go
pkg/audio/: buffer.go  builder.go  cinterop.go  dsp.go  envelope.go  midi.go  noteports.go  oscillator.go  portinfo.go  ports.go  ports_cinterop.go  process.go  selectablefilter.go  synth.go  voice.go
pkg/bridge/: bridge.go  main.go
pkg/clap/: base.go  events.go  params.go
pkg/controls/: builder.go  constants.go  remote.go
pkg/event/: builder.go  cinterop.go  event.go  helpers.go  midi.go  pool.go  processor.go  types.go
pkg/extension/: ambisonic.go  audioports.go  bundle.go  constants.go  contextmenu.go  eventregistry.go  interfaces.go  note_name.go  notename.go  posixfd.go  remotecontrols.go  render.go  surround.go  thread.go  tuning.go  voiceinfo.go
pkg/extensions/: audio_ports.go
pkg/host/: extensions.go  logger.go  params.go
pkg/manifest/: manifest.go  util.go
pkg/param/: atomic.go  binding.go  builder.go  cinterop.go  factory.go  format.go  indication.go  manager.go  mapping.go  param.go
pkg/performance/: benchmark_results.md  metrics.go  profiler.go  tracker.go  tracker_debug.go  tracker_release.go
pkg/plugin/: base.go  context.go  exports.go  generate_exports.go  interface.go  options.go  plugin.go
pkg/process/: constants.go
pkg/registry/: registry.go
pkg/state/: context.go  migration.go  state.go  stream.go
pkg/thread/: check.go  debug.go  pool.go  release.go
pkg/util/: atomic.go  audio.go  dsp.go  envelope.go  format.go
presets/factory/: lead.json  pad.json
scripts/: create_plugin.sh  extract_plugin_id.sh  install_presets.sh  test_plugin.sh  test_preset.sh
src/c/: bridge.c  bridge.h  bridge_old.c  manifest.c  manifest.h  plugin.c  plugin.h  plugin_invalidation.c  plugin_invalidation.h  preset_discovery.c  preset_discovery.h  state_converter.c  state_converter.h
src/goclap/: audio_ports.go  cgo.go  events.go  gui.go  hostinfo.go  note_ports.go  params.go  params_ext.go  plugin.go  preset_discovery.go  preset_load.go  state.go  utils.go  version.go
tests/: descriptor_memory_test.c  memory_test.c
